Add session and update auth flow
