# backend/internal/auth/handler/auth_handler.go
@@ -4,24 +4,28 @@ import (
 	"github.com/EmranP/Design-Struct-Project-AI/backend/internal/auth/dto"
 	"github.com/EmranP/Design-Struct-Project-AI/backend/internal/auth/usecase"
 
+	customerrors "github.com/EmranP/Design-Struct-Project-AI/backend/internal/shared/errors"
 	"github.com/EmranP/Design-Struct-Project-AI/backend/internal/shared/validator"
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
 
 type AuthHandler struct {
-	authUC usecase.AuthUseCase
+	authUC    usecase.AuthUseCase
+	sessionUC usecase.AuthSessionUseCase
 
 	validator *validator.Validator
 }
 
 func New(
 	authUC usecase.AuthUseCase,
+	sessionUC usecase.AuthSessionUseCase,
 	validator *validator.Validator,
 ) *AuthHandler {
 
 	return &AuthHandler{
 		authUC:    authUC,
+		sessionUC: sessionUC,
 		validator: validator,
 	}
 }
@@ -71,7 +75,7 @@ func (h *AuthHandler) Login(
 		return err
 	}
 
-	token, err := h.authUC.Login(
+	tokens, err := h.authUC.Login(
 		c.Context(),
 		req.Email,
 		req.Password,
@@ -81,9 +85,21 @@ func (h *AuthHandler) Login(
 		return err
 	}
 
+	c.Cookie(
+		&fiber.Cookie{
+			Name:     "refreshToken",
+			Value:    tokens.Refresh,
+			HTTPOnly: true,
+			Secure:   false,
+			SameSite: "Lax",
+			Path:     "/api",
+			MaxAge:   60 * 60 * 24 * 30,
+		},
+	)
+
 	return c.JSON(
 		dto.AuthResponse{
-			AccessToken: token,
+			AccessToken: tokens.Access,
 		},
 	)
 }
@@ -102,7 +118,7 @@ func (h *AuthHandler) VerifyEmail(
 		return err
 	}
 
-	err := h.authUC.VerifyEmail(
+	tokens, err := h.authUC.VerifyEmail(
 		c.Context(),
 		req.Email,
 		req.Code,
@@ -112,9 +128,22 @@ func (h *AuthHandler) VerifyEmail(
 		return err
 	}
 
+	c.Cookie(
+		&fiber.Cookie{
+			Name:     "refreshToken",
+			Value:    tokens.Refresh,
+			HTTPOnly: true,
+			Secure:   false,
+			SameSite: "Lax",
+			Path:     "/api",
+			MaxAge:   60 * 60 * 24 * 30,
+		},
+	)
+
 	return c.JSON(
 		fiber.Map{
-			"message": "email verified",
+			"message":     "email verified",
+			"accessToken": tokens.Access,
 		},
 	)
 }
@@ -147,6 +176,92 @@ func (h *AuthHandler) Me(c *fiber.Ctx) error {
 	).JSON(
 		fiber.Map{
 			"id": user,
+		},
+	)
+}
+
+// Session
+func (h *AuthHandler) Refresh(
+	c *fiber.Ctx,
+) error {
+
+	refreshToken := c.Cookies(
+		"refreshToken",
+	)
+
+	if refreshToken == "" {
+		return customerrors.ErrUnauthorized
+	}
+
+	tokens, err := h.sessionUC.
+		Refresh(
+			c.Context(),
+			refreshToken,
+		)
+
+	if err != nil {
+
+		return err
+	}
+
+	c.Cookie(
+		&fiber.Cookie{
+			Name:     "refreshToken",
+			Value:    tokens.Refresh,
+			HTTPOnly: true,
+			Secure:   false,
+			SameSite: "Lax",
+			Path:     "/api",
+			MaxAge:   60 * 60 * 24 * 30,
+		},
+	)
+
+	return c.JSON(
+		fiber.Map{
+			"accessToken": tokens.Access,
+		},
+	)
+}
+
+func (h *AuthHandler) Logout(
+	c *fiber.Ctx,
+) error {
+
+	userIdStr, ok := c.Locals("userId").(string)
+	if !ok || userIdStr == "" {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{
+			"error": "unauthorized: user id not found in token",
+		})
+	}
+
+	userID, errParse := uuid.Parse(userIdStr)
+	if errParse != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": "invalid user id format",
+		})
+	}
+
+	err := h.sessionUC.Clear(
+		c.Context(),
+		userID,
+	)
+
+	if err != nil {
+		return err
+	}
+
+	c.Cookie(
+		&fiber.Cookie{
+			Name:   "refreshToken",
+			Value:  "",
+			MaxAge: -1,
+			Path:   "/api",
+		},
+	)
+
+	return c.JSON(
+		fiber.Map{
+			"message": "logout successful",
 		},
 	)
 }
